--- a/aws-opensearch/.env-RemovePostFix
+++ b/aws-opensearch/.env-RemovePostFix
@@ -1,6 +1,6 @@
 ALFRESCO_TAG=7.2.0.2
 SHARE_TAG=7.2.0.2
-POSTGRES_ENDPOINT=opensearch-alf.cluster-cmamwihn936t.eu-west-1.rds.amazonaws.com
+POSTGRES_ENDPOINT=[replaceWithRDSEndPoint]
 POSTGRES_PORT=5432
 POSTGRES_USER=alfresco
 POSTGRES_PASSWORD=alfresco
@@ -9,9 +9,8 @@ TRANSFORM_ROUTER_TAG=1.5.3
 TRANSFORM_CORE_AIO_TAG=2.6.0
 SHARED_FILE_STORE_TAG=1.5.3
 
-#ACTIVE_MQ_TAG=5.17.1-jre11-centos7
-ACTIVEMQ_SERVER=b-ce5f5963-5627-435c-9c9c-73dd50dd2a04-1.mq.eu-west-1.amazonaws.com
-ACTIVEMQ_PORT=61617
+ACTIVEMQ_SERVER=[replaceWithAmazonMQEndPoint]
+ACTIVEMQ_PORT=[replaceWithOpenWirePort]
 ACTIVEMQ_SSL=true
 ACTIVEMQ_USERNAME=alfresco
 ACTIVEMQ_PASSWORD=alfrescoAmazonMQ
@@ -20,10 +19,8 @@ DIGITAL_WORKSPACE_TAG=2.9.1
 ACS_NGINX_TAG=3.4.2
 
 LIVE_INDEXING_TAG=3.1.0
-#LIVE_REINDEXING_TAG=3.1.0
-
 ELASTICSEARCH_INDEX_NAME=alfresco
-ELASTICSEARCH_SERVER_NAME=vpc-osalfangel-euw1-6tfeuq3k5uc3lhjjrlpdrn7efy.eu-west-1.es.amazonaws.com
+ELASTICSEARCH_SERVER_NAME=[replaceWithAmazonOpenSearchEndPoint]
 ELASTICSEARCH_SERVER_PORT=443
 ELASTICSEARCH_USER=alfresco
 ELASTICSEARCH_PASS=open5eachA!fresco
