--- a/aws-opensearch/docker-compose.yml
+++ b/aws-opensearch/docker-compose.yml
@@ -2,7 +2,10 @@ version: "2"
 
 services:
   alfresco:
-    image: quay.io/alfresco/alfresco-content-repository:${ALFRESCO_TAG}
+    build:
+      context: ./alfresco
+      args:
+        ALFRESCO_TAG: ${ALFRESCO_TAG}
     mem_limit: 4000m
     environment:
       JAVA_TOOL_OPTIONS: "
@@ -18,12 +21,12 @@ services:
       JAVA_OPTS: '
         -Delasticsearch.createIndexIfNotExists=true
         -Ddb.driver=org.postgresql.Driver
-        -Ddb.username=alfresco
-        -Ddb.password=alfresco
-        -Ddb.url=jdbc:postgresql://postgres:5432/alfresco
+        -Ddb.username=${POSTGRES_USER}
+        -Ddb.password=${POSTGRES_PASSWORD}
+        -Ddb.url=jdbc:postgresql://${POSTGRES_ENDPOINT}:${POSTGRES_PORT}/${POSTGRES_DATABASE}
         -Dindex.subsystem.name=elasticsearch
         -Delasticsearch.host=${ELASTICSEARCH_SERVER_NAME}
-        -Delasticsearch.port=443
+        -Delasticsearch.port=${ELASTICSEARCH_SERVER_PORT}
         -Delasticsearch.secureComms=https
         -Delasticsearch.indexName=${ELASTICSEARCH_INDEX_NAME}
         -Delasticsearch.user=${ELASTICSEARCH_USER}
@@ -33,7 +36,10 @@ services:
         -Dalfresco.host=localhost
         -Dalfresco.port=8080
         -Daos.baseUrlOverwrite=http://localhost:8080/alfresco/aos
-        -Dmessaging.broker.url="failover:(nio://activemq:61616)?timeout=3000&jms.useCompression=true"
+        -Dmessaging.broker.url="failover:(ssl://${ACTIVEMQ_SERVER}:${ACTIVEMQ_PORT})?timeout=3000&jms.useCompression=true"
+        -Dmessaging.broker.ssl=${ACTIVEMQ_SSL}
+        -Dmessaging.broker.username=${ACTIVEMQ_USERNAME}
+        -Dmessaging.broker.password=${ACTIVEMQ_PASSWORD}
         -Ddeployment.method=DOCKER_COMPOSE
         -Dtransform.service.enabled=true
         -Dtransform.service.url=http://transform-router:8095
@@ -46,38 +52,39 @@ services:
         -Dtransform.misc.url=http://transform-core-aio:8090/
         -Dcsrf.filter.enabled=false
         -Dalfresco.restApi.basicAuthScheme=true
-        -Dencryption.ssl.truststore.location=/usr/local/tomcat/alf_data/keystore/eu-west-1-truststore.jceks
-        -Dssl-truststore.password=password
+        -Dencryption.ssl.truststore.location=/usr/local/tomcat/keystore/aws-ireland.pfx
+        -Dssl-truststore.password=sph3re
         -Dencryption.ssl.truststore.type=PKCS12
         -Xms3600m -Xmx3600m
         '
     volumes:
-      - ./keystores:/usr/local/tomcat/alf_data/keystore
+      - ./keystores:/usr/local/tomcat/keystore
+      - /efs/alfresco_fs:/usr/local/tomcat/alf_data
 
   transform-router:
     mem_limit: 512m
     image: quay.io/alfresco/alfresco-transform-router:${TRANSFORM_ROUTER_TAG}
     environment:
       JAVA_OPTS: " -Xms256m -Xmx512m"
-      ACTIVEMQ_URL: "nio://activemq:61616"
+      ACTIVEMQ_URL: "ssl://${ACTIVEMQ_SERVER}:${ACTIVEMQ_PORT}"
+      ACTIVEMQ_USER: "${ACTIVEMQ_USERNAME}"
+      ACTIVEMQ_PASSWORD: "${ACTIVEMQ_PASSWORD}"
       CORE_AIO_URL: "http://transform-core-aio:8090"
       FILE_STORE_URL: "http://shared-file-store:8099/alfresco/api/-default-/private/sfs/versions/1/file"
     ports:
       - 8095:8095
-    links:
-      - activemq
 
   transform-core-aio:
     image: quay.io/alfresco/alfresco-transform-core-aio:${TRANSFORM_CORE_AIO_TAG}
     mem_limit: 2048m
     environment:
       JAVA_OPTS: " -Xms256m -Xmx2048m"
-      ACTIVEMQ_URL: "nio://activemq:61616"
+      ACTIVEMQ_URL: "ssl://${ACTIVEMQ_SERVER}:${ACTIVEMQ_PORT}"
+      ACTIVEMQ_USER: "${ACTIVEMQ_USERNAME}"
+      ACTIVEMQ_PASSWORD: "${ACTIVEMQ_PASSWORD}"
       FILE_STORE_URL: "http://shared-file-store:8099/alfresco/api/-default-/private/sfs/versions/1/file"
     ports:
       - 8090:8090
-    links:
-      - activemq
 
   shared-file-store:
     image: quay.io/alfresco/alfresco-shared-file-store:${SHARED_FILE_STORE_TAG}
@@ -90,26 +97,6 @@ services:
       - 8099:8099
     volumes:
       - shared-file-store-volume:/tmp/Alfresco/sfs
-
-  postgres:
-    image: postgres:${POSTGRES_TAG}
-    mem_limit: 512m
-    environment:
-      - POSTGRES_PASSWORD=alfresco
-      - POSTGRES_USER=alfresco
-      - POSTGRES_DB=alfresco
-    command: postgres -c max_connections=300 -c log_min_messages=LOG
-    ports:
-      - 5432:5432
-
-  activemq:
-    image: quay.io/alfresco/alfresco-activemq:${ACTIVE_MQ_TAG}
-    mem_limit: 1g
-    ports:
-      - 8161:8161 # Web Console
-      - 5672:5672 # AMQP
-      - 61616:61616 # OpenWire
-      - 61613:61613 # STOMP
 
   digital-workspace:
     image: quay.io/alfresco/alfresco-digital-workspace:${DIGITAL_WORKSPACE_TAG}
@@ -143,16 +130,18 @@ services:
       SPRING_ELASTICSEARCH_REST_URIS: https://${ELASTICSEARCH_SERVER_NAME}
       SPRING_ELASTICSEARCH_REST_USERNAME: ${ELASTICSEARCH_USER}
       SPRING_ELASTICSEARCH_REST_PASSWORD: ${ELASTICSEARCH_PASS}
-      SPRING_ACTIVEMQ_BROKERURL: nio://activemq:61616
+      SPRING_ACTIVEMQ_BROKERURL: ssl://${ACTIVEMQ_SERVER}:${ACTIVEMQ_PORT}
+      SPRING_ACTIVEMQ_USER: ${ACTIVEMQ_USERNAME}
+      SPRING_ACTIVEMQ_PASSWORD: ${ACTIVEMQ_PASSWORD}
       ALFRESCO_SHAREDFILESTORE_BASEURL: http://shared-file-store:8099/alfresco/api/-default-/private/sfs/versions/1/file/
       ALFRESCO_ACCEPTEDCONTENTMEDIATYPESCACHE_BASEURL: http://transform-core-aio:8090/transform/config
       JAVA_OPTS: '
-          -Djavax.net.ssl.trustStore=/tmp/eu-west-1-truststore.jceks
+          -Djavax.net.ssl.trustStore=/tmp/aws-ireland.pfx
           -Djavax.net.ssl.trustStoreType=PKCS12
-          -Djavax.net.ssl.trustStorePassword=password
+          -Djavax.net.ssl.trustStorePassword=sph3re
       '
     volumes:
-      - ./keystores/eu-west-1-truststore.jceks:/tmp/eu-west-1-truststore.jceks
+      - ./keystores/aws-ireland.pfx:/tmp/aws-ireland.pfx
 
 volumes:
   shared-file-store-volume:
