--- a/aws-opensearch/.env-RemovePostFix
+++ b/aws-opensearch/.env-RemovePostFix
@@ -8,6 +8,9 @@ POSTGRES_DATABASE=alfresco
 TRANSFORM_ROUTER_TAG=1.5.3
 TRANSFORM_CORE_AIO_TAG=2.6.0
 SHARED_FILE_STORE_TAG=1.5.3
+TRUSTSTORE_NAME=[replaceWithTrustStoreName|aws-ireland.pfx]
+TRUSTSTORE_TYPE=[replaceWithTrustStoreType|PKCS12]
+TRUSTSTORE_PASS=[replaceWithTrustStorePassword|sph3re]
 
 ACTIVEMQ_SERVER=[replaceWithAmazonMQEndPoint]
 ACTIVEMQ_PORT=[replaceWithOpenWirePort]
