--- a/aws-opensearch/docker-compose.yml
+++ b/aws-opensearch/docker-compose.yml
@@ -136,12 +136,12 @@ services:
       ALFRESCO_SHAREDFILESTORE_BASEURL: http://shared-file-store:8099/alfresco/api/-default-/private/sfs/versions/1/file/
       ALFRESCO_ACCEPTEDCONTENTMEDIATYPESCACHE_BASEURL: http://transform-core-aio:8090/transform/config
       JAVA_OPTS: '
-          -Djavax.net.ssl.trustStore=/tmp/aws-ireland.pfx
-          -Djavax.net.ssl.trustStoreType=PKCS12
-          -Djavax.net.ssl.trustStorePassword=sph3re
+          -Djavax.net.ssl.trustStore=/tmp/${TRUSTSTORE_NAME}
+          -Djavax.net.ssl.trustStoreType=${TRUSTSTORE_TYPE}
+          -Djavax.net.ssl.trustStorePassword=${TRUSTSTORE_PASS}
       '
     volumes:
-      - ./keystores/aws-ireland.pfx:/tmp/aws-ireland.pfx
+      - ./keystores/${TRUSTSTORE_NAME}:/tmp/${TRUSTSTORE_NAME}
 
 volumes:
   shared-file-store-volume:
