--- a/aws-opensearch/.env-RemovePostFix
+++ b/aws-opensearch/.env-RemovePostFix
@@ -10,13 +10,13 @@ TRANSFORM_CORE_AIO_TAG=2.6.0
 SHARED_FILE_STORE_TAG=1.5.3
 TRUSTSTORE_NAME=[replaceWithTrustStoreName|aws-ireland.pfx]
 TRUSTSTORE_TYPE=[replaceWithTrustStoreType|PKCS12]
-TRUSTSTORE_PASS=[replaceWithTrustStorePassword|sph3re]
+TRUSTSTORE_PASS=[replaceWithMQPassword|[replaceWithTrustStorePassword]|sph3re]
 
 ACTIVEMQ_SERVER=[replaceWithAmazonMQEndPoint]
 ACTIVEMQ_PORT=[replaceWithOpenWirePort]
 ACTIVEMQ_SSL=true
 ACTIVEMQ_USERNAME=alfresco
-ACTIVEMQ_PASSWORD=alfrescoAmazonMQ
+ACTIVEMQ_PASSWORD=[replaceWithMQPassword|alfrescoAmazonMQ]
 
 DIGITAL_WORKSPACE_TAG=2.9.1
 ACS_NGINX_TAG=3.4.2
@@ -26,4 +26,4 @@ ELASTICSEARCH_INDEX_NAME=alfresco
 ELASTICSEARCH_SERVER_NAME=[replaceWithAmazonOpenSearchEndPoint]
 ELASTICSEARCH_SERVER_PORT=443
 ELASTICSEARCH_USER=alfresco
-ELASTICSEARCH_PASS=open5eachA!fresco
+ELASTICSEARCH_PASS=[replaceWithOSPassword|open5eachA!fresco]
