Prepare Docker Compose to accept a fixed truststore.pkcs12 file produced with the script tool

--- a/aws-opensearch/.env-RemovePostFix
+++ b/aws-opensearch/.env-RemovePostFix
@@ -8,9 +8,9 @@ POSTGRES_DATABASE=alfresco
 TRANSFORM_ROUTER_TAG=1.5.3
 TRANSFORM_CORE_AIO_TAG=2.6.0
 SHARED_FILE_STORE_TAG=1.5.3
-TRUSTSTORE_NAME=[replaceWithTrustStoreName|aws-ireland.pfx]
-TRUSTSTORE_TYPE=[replaceWithTrustStoreType|PKCS12]
-TRUSTSTORE_PASS=[replaceWithMQPassword|[replaceWithTrustStorePassword]|sph3re]
+TRUSTSTORE_NAME=truststore.pkcs12
+TRUSTSTORE_TYPE=PKCS12
+TRUSTSTORE_PASS=sph3re
 
 ACTIVEMQ_SERVER=[replaceWithAmazonMQEndPoint]
 ACTIVEMQ_PORT=[replaceWithOpenWirePort]
